# BandGate

./: .gitignore  .gitmodules  CMakeLists.txt  build_and_install.sh  plan.md
.github/scripts/: push_to_moonbase.sh
.github/workflows/: build.yml
benchmarks/: Benchmarks.cpp  Catch2Main.cpp
cmake-local/: BandGateMoonbase.cmake  MoonbaseStubs.h
packaging/: dmg.json  installer.nsi
packaging/macos/: build_pkg.sh  distribution.xml.template
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectrumVisualizer.cpp  SpectrumVisualizer.h
source/DSP/: BandGateDSP.h
source/DSP/Core/: BandGateDSPProcessor.h  MultiBandLinkwitzRileySplitter.h  RelayDelayCore.cpp  RelayDelayCore.h  SpectralGate.h
source/DSP/Utils/: DSPUtils.h  ParameterSmoother.h
source/Service/: PresetManager.cpp  PresetManager.h
tests/: BandGateDSPProcessor_tests.cpp  Catch2Main.cpp  DSPUtils_tests.cpp  MultiBandSplitter_tests.cpp  ParameterSmoother_tests.cpp  PluginBasics.cpp  PluginProcessor_tests.cpp  RelayDelayCore_tests.cpp  SpectralGate_tests.cpp
tests/helpers/: test_helpers.h
